🐛 fix(ui): better align hyprland gaps with waybar and scrolling

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -106,10 +106,6 @@ button:hover {
 	margin-right: 0;
 }
 
-#clock {
-	margin-right: 5px;
-}
-
 /* #battery { */
 /* } */
 /**/
